--- a/views/view.erb
+++ b/views/view.erb
@@ -5,12 +5,11 @@
 <body>
 
 <section>
-<h1 class='card'>Welcome to <a href="/">Sinatra TODO List Manager.</a></h1>
+<h1>Welcome to <a href="/">Sinatra TODO List Manager.</a></h1>
 </section>
 
 <section class='rounded-corners'>
   <h3>Add new item</h3>
-
   <form method='post' action='/add'>
     <input type='text' name='name' placeholder='Task name?'>
     <textarea name='description' placeholder='Task description'></textarea>
