--- a/views/view.erb
+++ b/views/view.erb
@@ -6,11 +6,7 @@
 
 <section>
 <h1> Welcome to <a href="/">Sinatra TODO List Manager.</a></h1>
-<% if params[:num].to_i > 10 %>
-"You entered a number greater than 10"
-<% else %>
-"Less than 10"
-<% end %>
+<%= params %> 
 </section>
 
 <section class='rounded-corners'>
