--- a/view.erb
+++ b/view.erb
@@ -5,7 +5,7 @@
 <body>
 
   <section>
-  <h1> Welcome to <a href="/">Sinatra TODO List Manager.</a></h1>
+  <h1 id="welcomeMsg"> Welcome to <a href="/">Sinatra TODO List Manager.</a></h1>
   </section>
   
   <section class='rounded-corners'>
