--- a/view.erb
+++ b/view.erb
@@ -2,10 +2,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-<body>
+<body class='body-style'>
 
   <section>
-  <h1 id="welcomeMsg"> Welcome to <a href="/">Sinatra TODO List Manager.</a></h1>
+    <h1 id="welcomeMsg"> Welcome to <a href="/">Sinatra TODO List Manager.</a></h1>
   </section>
   
   <section class='rounded-corners'>
