--- a/view.erb
+++ b/view.erb
@@ -11,8 +11,8 @@
   <section class='rounded-corners'>
     <h3>Add new item</h3>
     <form method='post' action='/add'>
-      <input type='text' name='name' placeholder='Task name?'>
-      <textarea name='description' placeholder='Task description'></textarea>
+      <input type='text' name='task_name' placeholder='Task name?'>
+      <textarea name='task_description' placeholder='Task description'></textarea>
       <button type='submit' class='btn'>Add item</button>
     </form>
   </section>
